# PyCubing

./: .gitignore  README.md  Testing.py  pyproject.toml  requirements.py  requirements.txt  setup.cfg  setup.py
PyCubing/: GetScramble.py  Shufflers.py  __init__.py
src/PyCubing/: GetScramble.py
tests/: Testing.py
